nav no longer collapse

--- a/public/style.css
+++ b/public/style.css
@@ -111,16 +111,6 @@
      height: 2rem;
  }
 
- .mobileMenu {
-     display: none;
-     background-image: url("./menu.png");
-     background-position: center;
-     background-repeat: no-repeat;
-     width: 24px;
-     height: 24px;
-     cursor: pointer;
- }
-
  .menu {
      width: 100%;
      display: flex;
@@ -132,28 +122,21 @@
      padding: 0;
  }
 
- .menu span {
+ .menu {
      display: flex;
      justify-content: flex-end;
-     width: fit-content;
+     align-items: flex-end;
  }
 
- .menu span {
-     justify-content: flex-end;
+ .menu li a {
+     display: flex;
+     align-items: flex-end;
+     margin-right: 3rem;
+     margin-top: auto;
  }
 
- .menu li {
-     margin: 0 1rem 0 1rem;
-     width: fit-content;
-     overflow: hidden;
- }
-
- #menu-toggle {
-     display: none;
- }
-
- .header {
-     overflow: visible;
+ .menu li:nth-child(4) {
+     margin: 0rem 0rem 0rem 3rem;
  }
 
  .header img {
@@ -610,12 +593,16 @@
  }
 
  @media (max-width: 820px) {
-     .header {
-         overflow: visible;
+     .header img {
+         width: 150px;
      }
 
-     .header img {
-         object-fit: contain;
+     .menu li a {
+         margin-right: 1rem;
+     }
+
+     .menu li:nth-child(4) {
+         margin: 0rem 0rem 0rem 1rem;
      }
 
      .links {
@@ -623,7 +610,7 @@
      }
 
      .nav {
-         padding: 1rem;
+         padding: .5rem;
          margin: 0;
          height: fit-content;
          justify-content: space-between;
@@ -631,48 +618,6 @@
 
      .nav span {
          justify-content: space-between;
-     }
-
-     .mobileMenu {
-         display: block;
-     }
-
-     .mobileNav {
-         display: block;
-     }
-
-     .menu {
-         position: absolute;
-         z-index: 20;
-         top: 0;
-         margin-top: 135px;
-         left: 0;
-         flex-direction: column;
-         width: 100%;
-         justify-content: flex-start;
-         align-items: center;
-         background-color: #FFF;
-         box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-     }
-
-     .menu span {
-         flex-direction: column;
-     }
-
-     .menu span li {
-         overflow: visible;
-         height: 2rem;
-     }
-
-     #menu-toggle~.menu {
-         height: 0;
-         transition: height 0ms;
-     }
-
-     #menu-toggle:checked~.menu {
-         height: 20em;
-         padding: 0.5em;
-         transition: height 0ms;
      }
 
      .search input {
